--- a/site/index.html
+++ b/site/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page</title>
+    <title>Test Watson Assistant</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
-            text-align: center;
+            text-align: center;visibility: visible;
         }
         .container {
             width: 80%;
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <h1>Welcome to Simple HTML Page</h1>
-        <p>This is a basic HTML template.</p>
+        <p>Test Watson Assistant.</p>
     </div>
 
     <script>
