--- a/site/index.html
+++ b/site/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Simple HTML Page</h1>
+        <h1>Test Watson Assistant.</h1>
         <p>Test Watson Assistant.</p>
     </div>
 
