--- a/site/index.html
+++ b/site/index.html
@@ -58,9 +58,21 @@
             background-color: #6f6f6f;
             color: #ffffff;
         }
+
+        #WACContainer.WACContainer .WACLauncher__ButtonContainer.WACLauncher__ButtonContainer--round .WACLauncher__Button {
+            background-color: #E1111C !important;
+        }
+        
+        #WACContainer.WACContainer .WACLauncherComplex__Container .WACLauncherComplex__ContentButton {
+            background-color: #f7f0f0 !important;
+        }
+
     </style>
 </head>
 <body>
+    <div class="container">
+        <h1>Test Watson Assistant.</h1>
+    </div>
     <script>
         let webChatInstance;
         // We want to keep track of all the buttons in our last response so we can disable them if the user sends a message
@@ -143,6 +155,13 @@
             hasSentMessage = true;
         }
 
+        /**
+         * This function is called after a view change has occurred. It will show or hide the launcher.
+         */
+        function viewChangeHandler(event) {
+       
+        }
+
          /**
          * This is the function that is called when the web chat code has been loaded and it is ready to be rendered.
          */
@@ -162,12 +181,18 @@
             // Make sure that we disable the buttons each time the user sends a message.
             instance.on({ type: 'pre:send', handler: preSendHandler });
 
+            // Add listeners so we know when web chat has been opened or closed.
+            // See https://web-chat.global.assistant.watson.cloud.ibm.com/docs.html?to=api-events#summary for more about our
+            // events.
+            instance.on({ type: 'view:change', handler: viewChangeHandler });
+
             await instance.render();
         }
         window.watsonAssistantChatOptions = {
           integrationID: "0e7edc9c-daf5-415b-a4e9-788b5fad8821", // The ID of this integration.
           region: "us-south", // The region your integration is hosted in.
           serviceInstanceID: "84ecd0c3-9323-4281-b7a6-8e02854bbc5d", // The ID of your service instance.
+          showLauncher: true,
           onLoad: onLoad,
         };
         setTimeout(function(){
